--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": "^7.4 || ^8.0",
         "codeigniter4/framework": "^4.0",
         "eftec/bladeone": "^4.9",
-        "nesbot/carbon": "^2.72"
+        "nesbot/carbon": "^2.72",
+        "realrashid/sweet-alert": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
